update factory, iterator, singleton and state

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'designpatterns'
 
 include(
-    "observer", "adapter", "command", "composite", "decorator"
+    "observer", "adapter", "command", "composite", "decorator", 
+    "factory", "iterator", "singleton", "state"
 )
