--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'designpatterns'
 
 include(
-    "strategy", "observer"
+    "observer", "adapter", "command", "composite", "decorator"
 )
